# CMakeList.txt : CMake project for lambda, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("lambda")

# Add source to this project's executable.
add_executable (lambda "lambda.cpp" "lambda.h")

# TODO: Add tests and install targets if needed.
